# dictum-backend-postgres

./: README.md  pyproject.toml
.github/workflows/: test.yml
dictum_backend_postgres/: postgres.py
tests/: conftest.py  test_dictum_backend_postgres.py
