[tool.poetry]
name = "dictum-backend-postgres"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
dictum = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
known_first_party = ["dictum-backend-postgres"]

[[tool.poetry.source]]
name = "local"
url = "http://localhost:8080/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
